[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "forumscraper"
version = "0.0.7"
description = "A forum scraper library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPLv3"}
keywords = ["text-processing", "scraper", "forums", "phpbb", "smf", "xmb", "invision", "xenforo"]
authors = [
  {name = "Dominik Stanisław Suchora", email = "suchora.dominik7@gmail.com" }
]

dependencies = ['requests','reliq']

classifiers = [
  "Development Status :: 3 - Alpha",

  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
"Homepage" = "https://github.com/TUVIMEN/forumscraper"

[tool.setuptools]
packages = ["forumscraper","forumscraper.extractors"]

[project.scripts]
forumscraper = "forumscraper.__init__:main"
